k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /flask
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000

      - path: /express
        pathType: Prefix
        backend:
          service:
            name: express-service
            port:
              number: 3000
